--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style href = "stylesheet" src=""></style>
 </head>
 <body>
     <script src ="/rockpaperscissors.js"></script>
+    <h1>Rock Paper Scissors</h1>
+    <div>
+        <p></p>
+    </div>
+    <div>
+        <button></button>
+        <button></button>
+    </div>
+    
 </body>
 </html>
