--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style href = "stylesheet" src=""></style>
+    <title>RPS</title>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-    <script src ="/rockpaperscissors.js"></script>
-    <h1>Rock Paper Scissors</h1>
-    <div>
-        <p></p>
-    </div>
-    <div>
-        <button></button>
-        <button></button>
-    </div>
     
+    <div class="container">
+        <h1>Rock Paper Scissors</h1>
+    <div>
+        <p>Current round</p>
+        <br>
+    </div>
+    <div>
+        <button class="play-button">Play</button>
+    </div>
+    </div>
+   
+    
+<script src ="/rockpaperscissors.js"></script>  
 </body>
 </html>
