--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     
     <div class="container">
-        <h1>Rock Paper Scissors</h1>
-    <div>
-        <p>Current round</p>
-        <br>
-    </div>
-    <div>
-        <button class="play-button">Play</button>
-    </div>
+        <div class="main-content">
+            <h1>Rock Paper Scissors</h1>
+            <div>
+                <p>Current round</p>
+                <br>
+            </div>
+            <div>
+                <button class="play-button">Play</button>
+            </div>
+        </div>
     </div>
    
     
