implementing running score

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-    
+    <div class = "result">
+        <p>Score You vs Computer
+        </p>
+    </div>
     <div class="container">
         <div class="rock">
             <h1>ROCK</h1>
