added the score board

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class = "result">
-        <p>Score You vs Computer
-        </p>
+        <p>Score You vs Computer</p>
+        <div class="score">
+            <p class="yourScore">0</p><span>-</span><p class="computerScore">0</p>
+        </div>
+        
     </div>
     <div class="container">
         <div class="rock">
