adjusted so the score is shown

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <div class = "result">
         <p>Score You vs Computer</p>
         <div class="score">
-            <p class="yourScore">0</p><span>-</span><p class="computerScore">0</p>
+            <p class="yourScore"></p><span>-</span><p class="computerScore"></p>
+            <br>
+            
         </div>
+        <p class="winner"></p>
         
     </div>
     <div class="container">
