--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class = "result">
         <p>Score You vs Computer</p>
         <div class="score">
-            <p class="yourScore"></p><span>-</span><p class="computerScore"></p>
+            <span class="yourScoreSpan"></span><span>-</span><span class="computerScoreSpan"></span>
             <br>
             
         </div>
